source/parser/GenesysParser.output
Terminals unused in grammar

    fVAL
    fEVAL
    fLENG
    cELSE
    fRESUTIL
    fENTATRANK
    fNUMGR
    fATRGR


Grammar

    0 $accept: input "end of file"

    1 input: expression

    2 expression: assigment
    3           | command
    4           | logicalOr
    5           | illegal

    6 logicalOr: logicalOr oOR logicalXor
    7          | logicalXor

    8 logicalXor: logicalXor oXOR logicalAnd
    9           | logicalAnd

   10 logicalAnd: logicalAnd oAND logicalNot
   11           | logicalAnd oNAND logicalNot
   12           | logicalNot

   13 logicalNot: oNOT logicalNot
   14           | relational

   15 relational: relational "<" additive
   16           | relational ">" additive
   17           | relational oLE additive
   18           | relational oGE additive
   19           | relational oEQ additive
   20           | relational oNE additive
   21           | additive

   22 additive: additive "+" multiplicative
   23         | additive "-" multiplicative
   24         | multiplicative

   25 multiplicative: multiplicative "*" power
   26               | multiplicative "/" power
   27               | power

   28 power: unary "^" power
   29      | unary

   30 unary: "-" unary
   31      | "+" unary
   32      | primary

   33 primary: number
   34        | function
   35        | "(" expression ")"
   36        | attribute
   37        | simulationResponse
   38        | simulationControl
   39        | variable
   40        | formula

   41 number: NUMD
   42       | NUMH

   43 command: commandIF
   44        | commandFOR

   45 commandIF: cIF "(" expression "," expression "," expression ")"
   46          | cIF "(" expression "," expression ")"

   47 commandFOR: cFOR variable "=" expression cTO expression cDO assigment
   48           | cFOR attribute "=" expression cTO expression cDO assigment

   49 function: mathFunction
   50         | trigonFunction
   51         | probFunction
   52         | kernelFunction
   53         | elementFunction
   54         | pluginFunction
   55         | userFunction

   56 kernelFunction: fTNOW
   57               | fTFIN
   58               | fMAXREP
   59               | fNUMREP
   60               | fIDENT
   61               | simulEntitiesWIP

   62 elementFunction: fTAVG "(" CSTAT ")"
   63                | fCOUNT "(" COUNTER ")"

   64 trigonFunction: fSIN "(" expression ")"
   65               | fCOS "(" expression ")"

   66 mathFunction: fROUND "(" expression ")"
   67             | fFRAC "(" expression ")"
   68             | fTRUNC "(" expression ")"
   69             | fEXP "(" expression ")"
   70             | fSQRT "(" expression ")"
   71             | fLOG "(" expression ")"
   72             | fLN "(" expression ")"
   73             | fMOD "(" expression "," expression ")"
   74             | mathMIN "(" expression "," expression ")"
   75             | mathMAX "(" expression "," expression ")"

   76 probFunction: fRND1
   77             | fEXPO "(" expression ")"
   78             | fNORM "(" expression "," expression ")"
   79             | fUNIF "(" expression "," expression ")"
   80             | fWEIB "(" expression "," expression ")"
   81             | fLOGN "(" expression "," expression ")"
   82             | fGAMM "(" expression "," expression ")"
   83             | fERLA "(" expression "," expression ")"
   84             | fTRIA "(" expression "," expression "," expression ")"
   85             | fBETA "(" expression "," expression "," expression "," expression ")"
   86             | fDISC "(" listaparm ")"

   87 userFunction: "USER" "(" expression ")"

   88 listaparm: listaparm "," expression "," expression
   89          | expression "," expression

   90 indexList: expression
   91          | indexList "," expression

   92 illegal: ILLEGAL

   93 attribute: ATRIB
   94          | ATRIB "[" indexList "]"

   95 simulationResponse: SIMRESP

   96 simulationControl: SIMCTRL

   97 variable: VARI
   98         | VARI "[" indexList "]"

   99 formula: FORM
  100        | FORM "[" expression "]"
  101        | FORM "[" expression "," expression "]"
  102        | FORM "[" expression "," expression "," expression "]"

  103 assigment: ATRIB "=" expression
  104          | ATRIB "[" indexList "]" "=" expression
  105          | VARI "=" expression
  106          | VARI "[" indexList "]" "=" expression

  107 pluginFunction: CTEZERO
  108               | fNQ "(" QUEUE ")"
  109               | fLASTINQ "(" QUEUE ")"
  110               | fFIRSTINQ "(" QUEUE ")"
  111               | fSAQUE "(" QUEUE "," ATRIB ")"
  112               | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
  113               | fMR "(" RESOURCE ")"
  114               | fNR "(" RESOURCE ")"
  115               | fRESSEIZES "(" RESOURCE ")"
  116               | fSTATE "(" RESOURCE ")"
  117               | fIRF "(" RESOURCE ")"
  118               | fSETSUM "(" SET ")"
  119               | fNUMSET "(" SET ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    NUMD <obj_t> (258) 41 112
    NUMH <obj_t> (259) 42
    CTEZERO <obj_t> (260) 107
    oLE <obj_t> (261) 17
    oGE <obj_t> (262) 18
    oEQ <obj_t> (263) 19
    oNE <obj_t> (264) 20
    oAND <obj_t> (265) 10
    oOR <obj_t> (266) 6
    oNAND <obj_t> (267) 11
    oXOR <obj_t> (268) 8
    oNOT <obj_t> (269) 13
    fSIN <obj_t> (270) 64
    fCOS <obj_t> (271) 65
    fROUND <obj_t> (272) 66
    fMOD <obj_t> (273) 73
    fTRUNC <obj_t> (274) 68
    fFRAC <obj_t> (275) 67
    fEXP <obj_t> (276) 69
    fSQRT <obj_t> (277) 70
    fLOG <obj_t> (278) 71
    fLN <obj_t> (279) 72
    mathMIN <obj_t> (280) 74
    mathMAX <obj_t> (281) 75
    fVAL <obj_t> (282)
    fEVAL <obj_t> (283)
    fLENG <obj_t> (284)
    fRND1 <obj_t> (285) 76
    fEXPO <obj_t> (286) 77
    fNORM <obj_t> (287) 78
    fUNIF <obj_t> (288) 79
    fWEIB <obj_t> (289) 80
    fLOGN <obj_t> (290) 81
    fGAMM <obj_t> (291) 82
    fERLA <obj_t> (292) 83
    fTRIA <obj_t> (293) 84
    fBETA <obj_t> (294) 85
    fDISC <obj_t> (295) 86
    fTNOW <obj_t> (296) 56
    fTFIN <obj_t> (297) 57
    fMAXREP <obj_t> (298) 58
    fNUMREP <obj_t> (299) 59
    fIDENT <obj_t> (300) 60
    simulEntitiesWIP <obj_t> (301) 61
    cIF <obj_t> (302) 45 46
    cELSE <obj_t> (303)
    cFOR <obj_t> (304) 47 48
    cTO <obj_t> (305) 47 48
    cDO <obj_t> (306) 47 48
    ATRIB <obj_t> (307) 93 94 103 104 111 112
    CSTAT <obj_t> (308) 62
    COUNTER <obj_t> (309) 63
    SIMRESP <obj_t> (310) 95
    SIMCTRL <obj_t> (311) 96
    fTAVG <obj_t> (312) 62
    fCOUNT <obj_t> (313) 63
    ILLEGAL <obj_t> (314) 92
    RESOURCE <obj_t> (315) 113 114 115 116 117
    fNR <obj_t> (316) 114
    fMR <obj_t> (317) 113
    fIRF <obj_t> (318) 117
    fRESSEIZES <obj_t> (319) 115
    fSTATE <obj_t> (320) 116
    fSETSUM <obj_t> (321) 118
    fRESUTIL <obj_t> (322)
    QUEUE <obj_t> (323) 108 109 110 111 112
    fNQ <obj_t> (324) 108
    fFIRSTINQ <obj_t> (325) 110
    fLASTINQ <obj_t> (326) 109
    fSAQUE <obj_t> (327) 111
    fAQUE <obj_t> (328) 112
    fENTATRANK <obj_t> (329)
    SET <obj_t> (330) 118 119
    fNUMSET <obj_t> (331) 119
    VARI <obj_t> (332) 97 98 105 106
    FORM <obj_t> (333) 99 100 101 102
    fNUMGR <obj_t> (334)
    fATRGR <obj_t> (335)
    "(" (336) 35 45 46 62 63 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 82 83 84 85 86 87 108 109 110 111 112 113 114 115 116 117 118 119
    ")" (337) 35 45 46 62 63 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 82 83 84 85 86 87 108 109 110 111 112 113 114 115 116 117 118 119
    "[" (338) 94 98 100 101 102 104 106
    "]" (339) 94 98 100 101 102 104 106
    "+" (340) 22 31
    "-" (341) 23 30
    "*" (342) 25
    "^" (343) 28
    "/" (344) 26
    "<" (345) 15
    ">" (346) 16
    "=" (347) 47 48 103 104 105 106
    "," (348) 45 46 73 74 75 78 79 80 81 82 83 84 85 88 89 91 101 102 111 112
    "USER" (349) 87


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    input <obj_t> (96)
        on left: 1
        on right: 0
    expression <obj_t> (97)
        on left: 2 3 4 5
        on right: 1 35 45 46 47 48 64 65 66 67 68 69 70 71 72 73 74 75 77 78 79 80 81 82 83 84 85 87 88 89 90 91 100 101 102 103 104 105 106
    logicalOr <obj_t> (98)
        on left: 6 7
        on right: 4 6
    logicalXor <obj_t> (99)
        on left: 8 9
        on right: 6 7 8
    logicalAnd <obj_t> (100)
        on left: 10 11 12
        on right: 8 9 10 11
    logicalNot <obj_t> (101)
        on left: 13 14
        on right: 10 11 12 13
    relational <obj_t> (102)
        on left: 15 16 17 18 19 20 21
        on right: 14 15 16 17 18 19 20
    additive <obj_t> (103)
        on left: 22 23 24
        on right: 15 16 17 18 19 20 21 22 23
    multiplicative <obj_t> (104)
        on left: 25 26 27
        on right: 22 23 24 25 26
    power <obj_t> (105)
        on left: 28 29
        on right: 25 26 27 28
    unary <obj_t> (106)
        on left: 30 31 32
        on right: 28 29 30 31
    primary <obj_t> (107)
        on left: 33 34 35 36 37 38 39 40
        on right: 32
    number <obj_t> (108)
        on left: 41 42
        on right: 33
    command <obj_t> (109)
        on left: 43 44
        on right: 3
    commandIF <obj_t> (110)
        on left: 45 46
        on right: 43
    commandFOR <obj_t> (111)
        on left: 47 48
        on right: 44
    function <obj_t> (112)
        on left: 49 50 51 52 53 54 55
        on right: 34
    kernelFunction <obj_t> (113)
        on left: 56 57 58 59 60 61
        on right: 52
    elementFunction <obj_t> (114)
        on left: 62 63
        on right: 53
    trigonFunction <obj_t> (115)
        on left: 64 65
        on right: 50
    mathFunction <obj_t> (116)
        on left: 66 67 68 69 70 71 72 73 74 75
        on right: 49
    probFunction <obj_t> (117)
        on left: 76 77 78 79 80 81 82 83 84 85 86
        on right: 51
    userFunction <obj_t> (118)
        on left: 87
        on right: 55
    listaparm <obj_t> (119)
        on left: 88 89
        on right: 86 88
    indexList <std::string> (120)
        on left: 90 91
        on right: 91 94 98 104 106
    illegal <obj_t> (121)
        on left: 92
        on right: 5
    attribute <obj_t> (122)
        on left: 93 94
        on right: 36 48
    simulationResponse <obj_t> (123)
        on left: 95
        on right: 37
    simulationControl <obj_t> (124)
        on left: 96
        on right: 38
    variable <obj_t> (125)
        on left: 97 98
        on right: 39 47
    formula <obj_t> (126)
        on left: 99 100 101 102
        on right: 40
    assigment <obj_t> (127)
        on left: 103 104 105 106
        on right: 2 47 48
    pluginFunction <obj_t> (128)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119
        on right: 54


State 0

    0 $accept: • input "end of file"

    NUMD              shift, and go to state 1
    NUMH              shift, and go to state 2
    CTEZERO           shift, and go to state 3
    oNOT              shift, and go to state 4
    fSIN              shift, and go to state 5
    fCOS              shift, and go to state 6
    fROUND            shift, and go to state 7
    fMOD              shift, and go to state 8
    fTRUNC            shift, and go to state 9
    fFRAC             shift, and go to state 10
    fEXP              shift, and go to state 11
    fSQRT             shift, and go to state 12
    fLOG              shift, and go to state 13
    fLN               shift, and go to state 14
    mathMIN           shift, and go to state 15
    mathMAX           shift, and go to state 16
    fRND1             shift, and go to state 17
    fEXPO             shift, and go to state 18
    fNORM             shift, and go to state 19
    fUNIF             shift, and go to state 20
    fWEIB             shift, and go to state 21
    fLOGN             shift, and go to state 22
    fGAMM             shift, and go to state 23
    fERLA             shift, and go to state 24
    fTRIA             shift, and go to state 25
    fBETA             shift, and go to state 26
    fDISC             shift, and go to state 27
    fTNOW             shift, and go to state 28
    fTFIN             shift, and go to state 29
    fMAXREP           shift, and go to state 30
    fNUMREP           shift, and go to state 31
    fIDENT            shift, and go to state 32
    simulEntitiesWIP  shift, and go to state 33
    cIF               shift, and go to state 34
    cFOR              shift, and go to state 35
    ATRIB             shift, and go to state 36
    SIMRESP           shift, and go to state 37
    SIMCTRL           shift, and go to state 38
    fTAVG             shift, and go to state 39
    fCOUNT            shift, and go to state 40
    ILLEGAL           shift, and go to state 41
    fNR               shift, and go to state 42
    fMR               shift, and go to state 43
    fIRF              shift, and go to state 44
    fRESSEIZES        shift, and go to state 45
    fSTATE            shift, and go to state 46
    fSETSUM           shift, and go to state 47
    fNQ               shift, and go to state 48
    fFIRSTINQ         shift, and go to state 49
    fLASTINQ          shift, and go to state 50
    fSAQUE            shift, and go to state 51
    fAQUE             shift, and go to state 52
    fNUMSET           shift, and go to state 53
    VARI              shift, and go to state 54
    FORM              shift, and go to state 55
    "("               shift, and go to state 56
    "+"               shift, and go to state 57
    "-"               shift, and go to state 58
    "USER"            shift, and go to state 59

    input               go to state 60
    expression          go to state 61
    logicalOr           go to state 62
    logicalXor          go to state 63
    logicalAnd          go to state 64
    logicalNot          go to state 65
    relational          go to state 66
    additive            go to state 67
    multiplicative      go to state 68
    power               go to state 69
    unary               go to state 70
    primary             go to state 71
    number              go to state 72
    command             go to state 73
    commandIF           go to state 74
    commandFOR          go to state 75
    function            go to state 76
    kernelFunction      go to state 77
    elementFunction     go to state 78
    trigonFunction      go to state 79
    mathFunction        go to state 80
    probFunction        go to state 81
    userFunction        go to state 82
    illegal             go to state 83
    attribute           go to state 84
    simulationResponse  go to state 85
    simulationControl   go to state 86
    variable            go to state 87
    formula             go to state 88
    assigment           go to state 89
    pluginFunction      go to state 90


State 1

   41 number: NUMD •

    $default  reduce using rule 41 (number)


State 2

   42 number: NUMH •

    $default  reduce using rule 42 (number)


State 3

  107 pluginFunction: CTEZERO •

    $default  reduce using rule 107 (pluginFunction)


State 4

   13 logicalNot: oNOT • logicalNot

    NUMD              shift, and go to state 1
    NUMH              shift, and go to state 2
    CTEZERO           shift, and go to state 3
    oNOT              shift, and go to state 4
    fSIN              shift, and go to state 5
    fCOS              shift, and go to state 6
    fROUND            shift, and go to state 7
    fMOD              shift, and go to state 8
    fTRUNC            shift, and go to state 9
    fFRAC             shift, and go to state 10
    fEXP              shift, and go to state 11
    fSQRT             shift, and go to state 12
    fLOG              shift, and go to state 13
    fLN               shift, and go to state 14
    mathMIN           shift, and go to state 15
    mathMAX           shift, and go to state 16
    fRND1             shift, and go to state 17
    fEXPO             shift, and go to state 18
    fNORM             shift, and go to state 19
    fUNIF             shift, and go to state 20
    fWEIB             shift, and go to state 21
    fLOGN             shift, and go to state 22
    fGAMM             shift, and go to state 23
    fERLA             shift, and go to state 24
    fTRIA             shift, and go to state 25
    fBETA             shift, and go to state 26
    fDISC             shift, and go to state 27
    fTNOW             shift, and go to state 28
    fTFIN             shift, and go to state 29
    fMAXREP           shift, and go to state 30
    fNUMREP           shift, and go to state 31
    fIDENT            shift, and go to state 32
    simulEntitiesWIP  shift, and go to state 33
    ATRIB             shift, and go to state 91
    SIMRESP           shift, and go to state 37
    SIMCTRL           shift, and go to state 38
    fTAVG             shift, and go to state 39
    fCOUNT            shift, and go to state 40
    fNR               shift, and go to state 42
    fMR               shift, and go to state 43
    fIRF              shift, and go to state 44
    fRESSEIZES        shift, and go to state 45
    fSTATE            shift, and go to state 46
    fSETSUM           shift, and go to state 47
    fNQ               shift, and go to state 48
    fFIRSTINQ         shift, and go to state 49
    fLASTINQ          shift, and go to state 50
    fSAQUE            shift, and go to state 51
    fAQUE             shift, and go to state 52
    fNUMSET           shift, and go to state 53
    VARI              shift, and go to state 92
    FORM              shift, and go to state 55
    "("               shift, and go to state 56
    "+"               shift, and go to state 57
    "-"               shift, and go to state 58
    "USER"            shift, and go to state 59

    logicalNot          go to state 93
    relational          go to state 66
    additive            go to state 67
    multiplicative      go to state 68
    power               go to state 69
    unary               go to state 70
    primary             go to state 71
    number              go to state 72
    function            go to state 76
    kernelFunction      go to state 77
    elementFunction     go to state 78
    trigonFunction      go to state 79
    mathFunction        go to state 80
    probFunction        go to state 81
    userFunction        go to state 82
    attribute           go to state 84
    simulationResponse  go to state 85
    simulationControl   go to state 86
    variable            go to state 87
    formula             go to state 88
    pluginFunction      go to state 90


State 5

   64 trigonFunction: fSIN • "(" expression ")"

    "("  shift, and go to state 94


State 6

   65 trigonFunction: fCOS • "(" expression ")"

    "("  shift, and go to state 95


State 7

   66 mathFunction: fROUND • "(" expression ")"

    "("  shift, and go to state 96


State 8

   73 mathFunction: fMOD • "(" expression "," expression ")"

    "("  shift, and go to state 97


State 9

   68 mathFunction: fTRUNC • "(" expression ")"

    "("  shift, and go to state 98


State 10

   67 mathFunction: fFRAC • "(" expression ")"

    "("  shift, and go to state 99


State 11

   69 mathFunction: fEXP • "(" expression ")"

    "("  shift, and go to state 100


State 12

   70 mathFunction: fSQRT • "(" expression ")"

    "("  shift, and go to state 101


State 13

   71 mathFunction: fLOG • "(" expression ")"

    "("  shift, and go to state 102


State 14

   72 mathFunction: fLN • "(" expression ")"

    "("  shift, and go to state 103


State 15

   74 mathFunction: mathMIN • "(" expression "," expression ")"

    "("  shift, and go to state 104


State 16

   75 mathFunction: mathMAX • "(" expression "," expression ")"

    "("  shift, and go to state 105


State 17

   76 probFunction: fRND1 •

    $default  reduce using rule 76 (probFunction)


State 18

   77 probFunction: fEXPO • "(" expression ")"

    "("  shift, and go to state 106


State 19

   78 probFunction: fNORM • "(" expression "," expression ")"

    "("  shift, and go to state 107


State 20

   79 probFunction: fUNIF • "(" expression "," expression ")"

    "("  shift, and go to state 108


State 21

   80 probFunction: fWEIB • "(" expression "," expression ")"

    "("  shift, and go to state 109


State 22

   81 probFunction: fLOGN • "(" expression "," expression ")"

    "("  shift, and go to state 110


State 23

   82 probFunction: fGAMM • "(" expression "," expression ")"

    "("  shift, and go to state 111


State 24

   83 probFunction: fERLA • "(" expression "," expression ")"

    "("  shift, and go to state 112


State 25

   84 probFunction: fTRIA • "(" expression "," expression "," expression ")"

    "("  shift, and go to state 113


State 26

   85 probFunction: fBETA • "(" expression "," expression "," expression "," expression ")"

    "("  shift, and go to state 114


State 27

   86 probFunction: fDISC • "(" listaparm ")"

    "("  shift, and go to state 115


State 28

   56 kernelFunction: fTNOW •

    $default  reduce using rule 56 (kernelFunction)


State 29

   57 kernelFunction: fTFIN •

    $default  reduce using rule 57 (kernelFunction)


State 30

   58 kernelFunction: fMAXREP •

    $default  reduce using rule 58 (kernelFunction)


State 31

   59 kernelFunction: fNUMREP •

    $default  reduce using rule 59 (kernelFunction)


State 32

   60 kernelFunction: fIDENT •

    $default  reduce using rule 60 (kernelFunction)


State 33

   61 kernelFunction: simulEntitiesWIP •

    $default  reduce using rule 61 (kernelFunction)


State 34

   45 commandIF: cIF • "(" expression "," expression "," expression ")"
   46          | cIF • "(" expression "," expression ")"

    "("  shift, and go to state 116


State 35

   47 commandFOR: cFOR • variable "=" expression cTO expression cDO assigment
   48           | cFOR • attribute "=" expression cTO expression cDO assigment

    ATRIB  shift, and go to state 91
    VARI   shift, and go to state 92

    attribute  go to state 117
    variable   go to state 118


State 36

   93 attribute: ATRIB •
   94          | ATRIB • "[" indexList "]"
  103 assigment: ATRIB • "=" expression
  104          | ATRIB • "[" indexList "]" "=" expression

    "["  shift, and go to state 119
    "="  shift, and go to state 120

    $default  reduce using rule 93 (attribute)


State 37

   95 simulationResponse: SIMRESP •

    $default  reduce using rule 95 (simulationResponse)


State 38

   96 simulationControl: SIMCTRL •

    $default  reduce using rule 96 (simulationControl)


State 39

   62 elementFunction: fTAVG • "(" CSTAT ")"

    "("  shift, and go to state 121


State 40

   63 elementFunction: fCOUNT • "(" COUNTER ")"

    "("  shift, and go to state 122


State 41

   92 illegal: ILLEGAL •

    $default  reduce using rule 92 (illegal)


State 42

  114 pluginFunction: fNR • "(" RESOURCE ")"

    "("  shift, and go to state 123


State 43

  113 pluginFunction: fMR • "(" RESOURCE ")"

    "("  shift, and go to state 124


State 44

  117 pluginFunction: fIRF • "(" RESOURCE ")"

    "("  shift, and go to state 125


State 45

  115 pluginFunction: fRESSEIZES • "(" RESOURCE ")"

    "("  shift, and go to state 126


State 46

  116 pluginFunction: fSTATE • "(" RESOURCE ")"

    "("  shift, and go to state 127


State 47

  118 pluginFunction: fSETSUM • "(" SET ")"

    "("  shift, and go to state 128


State 48

  108 pluginFunction: fNQ • "(" QUEUE ")"

    "("  shift, and go to state 129


State 49

  110 pluginFunction: fFIRSTINQ • "(" QUEUE ")"

    "("  shift, and go to state 130


State 50

  109 pluginFunction: fLASTINQ • "(" QUEUE ")"

    "("  shift, and go to state 131


State 51

  111 pluginFunction: fSAQUE • "(" QUEUE "," ATRIB ")"

    "("  shift, and go to state 132


State 52

  112 pluginFunction: fAQUE • "(" QUEUE "," NUMD "," ATRIB ")"

    "("  shift, and go to state 133


State 53

  119 pluginFunction: fNUMSET • "(" SET ")"

    "("  shift, and go to state 134


State 54

   97 variable: VARI •
   98         | VARI • "[" indexList "]"
  105 assigment: VARI • "=" expression
  106          | VARI • "[" indexList "]" "=" expression

    "["  shift, and go to state 135
    "="  shift, and go to state 136

    $default  reduce using rule 97 (variable)


State 55

   99 formula: FORM •
  100        | FORM • "[" expression "]"
  101        | FORM • "[" expression "," expression "]"
  102        | FORM • "[" expression "," expression "," expression "]"

    "["  shift, and go to state 137

    $default  reduce using rule 99 (formula)


State 56

   35 primary: "(" • expression ")"

    NUMD              shift, and go to state 1
    NUMH              shift, and go to state 2
    CTEZERO           shift, and go to state 3
    oNOT              shift, and go to state 4
    fSIN              shift, and go to state 5
    fCOS              shift, and go to state 6
    fROUND            shift, and go to state 7
    fMOD              shift, and go to state 8
    fTRUNC            shift, and go to state 9
    fFRAC             shift, and go to state 10
    fEXP              shift, and go to state 11
    fSQRT             shift, and go to state 12
    fLOG              shift, and go to state 13
    fLN               shift, and go to state 14
    mathMIN           shift, and go to state 15
    mathMAX           shift, and go to state 16
    fRND1             shift, and go to state 17
    fEXPO             shift, and go to state 18
    fNORM             shift, and go to state 19
    fUNIF             shift, and go to state 20
    fWEIB             shift, and go to state 21
    fLOGN             shift, and go to state 22
    fGAMM             shift, and go to state 23
    fERLA             shift, and go to state 24
    fTRIA             shift, and go to state 25
    fBETA             shift, and go to state 26
    fDISC             shift, and go to state 27
    fTNOW             shift, and go to state 28
    fTFIN             shift, and go to state 29
    fMAXREP           shift, and go to state 30
    fNUMREP           shift, and go to state 31
    fIDENT            shift, and go to state 32
    simulEntitiesWIP  shift, and go to state 33
    cIF               shift, and go to state 34
    cFOR              shift, and go to state 35
    ATRIB             shift, and go to state 36
    SIMRESP           shift, and go to state 37
    SIMCTRL           shift, and go to state 38
    fTAVG             shift, and go to state 39
    fCOUNT            shift, and go to state 40
    ILLEGAL           shift, and go to state 41
    fNR               shift, and go to state 42
    fMR               shift, and go to state 43
    fIRF              shift, and go to state 44
    fRESSEIZES        shift, and go to state 45
    fSTATE            shift, and go to state 46
    fSETSUM           shift, and go to state 47
    fNQ               shift, and go to state 48
    fFIRSTINQ         shift, and go to state 49
    fLASTINQ          shift, and go to state 50
    fSAQUE            shift, and go to state 51
    fAQUE             shift, and go to state 52
    fNUMSET           shift, and go to state 53
    VARI              shift, and go to state 54
    FORM              shift, and go to state 55
    "("               shift, and go to state 56
    "+"               shift, and go to state 57
    "-"               shift, and go to state 58
    "USER"            shift, and go to state 59

    expression          go to state 138
    logicalOr           go to state 62
    logicalXor          go to state 63
    logicalAnd          go to state 64
    logicalNot          go to state 65
    relational          go to state 66
    additive            go to state 67
    multiplicative      go to state 68
    power               go to state 69
    unary               go to state 70
    primary             go to state 71
    number              go to state 72
    command             go to state 73
    commandIF           go to state 74
    commandFOR          go to state 75
    function            go to state 76
    kernelFunction      go to state 77
    elementFunction     go to state 78
    trigonFunction      go to state 79
    mathFunction        go to state 80
    probFunction        go to state 81
    userFunction        go to state 82
    illegal             go to state 83
    attribute           go to state 84
    simulationResponse  go to state 85
    simulationControl   go to state 86
    variable            go to state 87
    formula             go to state 88
    assigment           go to state 89
    pluginFunction      go to state 90


State 57

   31 unary: "+" • unary

    NUMD              shift, and go to state 1
    NUMH              shift, and go to state 2
    CTEZERO           shift, and go to state 3
    fSIN              shift, and go to state 5
    fCOS              shift, and go to state 6
    fROUND            shift, and go to state 7
    fMOD              shift, and go to state 8
    fTRUNC            shift, and go to state 9
    fFRAC             shift, and go to state 10
    fEXP              shift, and go to state 11
    fSQRT             shift, and go to state 12
    fLOG              shift, and go to state 13
    fLN               shift, and go to state 14
    mathMIN           shift, and go to state 15
    mathMAX           shift, and go to state 16
    fRND1             shift, and go to state 17
    fEXPO             shift, and go to state 18
    fNORM             shift, and go to state 19
    fUNIF             shift, and go to state 20
    fWEIB             shift, and go to state 21
    fLOGN             shift, and go to state 22
    fGAMM             shift, and go to state 23
    fERLA             shift, and go to state 24
    fTRIA             shift, and go to state 25
    fBETA             shift, and go to state 26
    fDISC             shift, and go to state 27
    fTNOW             shift, and go to state 28
    fTFIN             shift, and go to state 29
    fMAXREP           shift, and go to state 30
    fNUMREP           shift, and go to state 31
    fIDENT            shift, and go to state 32
    simulEntitiesWIP  shift, and go to state 33
    ATRIB             shift, and go to state 91
    SIMRESP           shift, and go to state 37
    SIMCTRL           shift, and go to state 38
    fTAVG             shift, and go to state 39
    fCOUNT            shift, and go to state 40
    fNR               shift, and go to state 42
    fMR               shift, and go to state 43
    fIRF              shift, and go to state 44
    fRESSEIZES        shift, and go to state 45
    fSTATE            shift, and go to state 46
    fSETSUM           shift, and go to state 47
    fNQ               shift, and go to state 48
    fFIRSTINQ         shift, and go to state 49
    fLASTINQ          shift, and go to state 50
    fSAQUE            shift, and go to state 51
    fAQUE             shift, and go to state 52
    fNUMSET           shift, and go to state 53
    VARI              shift, and go to state 92
    FORM              shift, and go to state 55
    "("               shift, and go to state 56
    "+"               shift, and go to state 57
    "-"               shift, and go to state 58
    "USER"            shift, and go to state 59

    unary               go to state 139
    primary             go to state 71
    number              go to state 72
    function            go to state 76
    kernelFunction      go to state 77
    elementFunction     go to state 78
    trigonFunction      go to state 79
    mathFunction        go to state 80
    probFunction        go to state 81
    userFunction        go to state 82
    attribute           go to state 84
    simulationResponse  go to state 85
    simulationControl   go to state 86
    variable            go to state 87
    formula             go to state 88
    pluginFunction      go to state 90


State 58

   30 unary: "-" • unary

    NUMD              shift, and go to state 1
    NUMH              shift, and go to state 2
    CTEZERO           shift, and go to state 3
    fSIN              shift, and go to state 5
    fCOS              shift, and go to state 6
    fROUND            shift, and go to state 7
    fMOD              shift, and go to state 8
    fTRUNC            shift, and go to state 9
    fFRAC             shift, and go to state 10
    fEXP              shift, and go to state 11
    fSQRT             shift, and go to state 12
    fLOG              shift, and go to state 13
    fLN               shift, and go to state 14
    mathMIN           shift, and go to state 15
    mathMAX           shift, and go to state 16
    fRND1             shift, and go to state 17
    fEXPO             shift, and go to state 18
    fNORM             shift, and go to state 19
    fUNIF             shift, and go to state 20
    fWEIB             shift, and go to state 21
    fLOGN             shift, and go to state 22
    fGAMM             shift, and go to state 23
    fERLA             shift, and go to state 24
    fTRIA             shift, and go to state 25
    fBETA             shift, and go to state 26
    fDISC             shift, and go to state 27
    fTNOW             shift, and go to state 28
    fTFIN             shift, and go to state 29
    fMAXREP           shift, and go to state 30
    fNUMREP           shift, and go to state 31
    fIDENT            shift, and go to state 32
    simulEntitiesWIP  shift, and go to state 33
    ATRIB             shift, and go to state 91
    SIMRESP           shift, and go to state 37
    SIMCTRL           shift, and go to state 38
    fTAVG             shift, and go to state 39
    fCOUNT            shift, and go to state 40
    fNR               shift, and go to state 42
    fMR               shift, and go to state 43
    fIRF              shift, and go to state 44
    fRESSEIZES        shift, and go to state 45
    fSTATE            shift, and go to state 46
    fSETSUM           shift, and go to state 47
    fNQ               shift, and go to state 48
    fFIRSTINQ         shift, and go to state 49
    fLASTINQ          shift, and go to state 50
    fSAQUE            shift, and go to state 51
    fAQUE             shift, and go to state 52
    fNUMSET           shift, and go to state 53
    VARI              shift, and go to state 92
    FORM              shift, and go to state 55
    "("               shift, and go to state 56
    "+"               shift, and go to state 57
    "-"               shift, and go to state 58
    "USER"            shift, and go to state 59

    unary               go to state 140
    primary             go to state 71
    number              go to state 72
    function            go to state 76
    kernelFunction      go to state 77
    elementFunction     go to state 78
    trigonFunction      go to state 79
    mathFunction        go to state 80
    probFunction        go to state 81
    userFunction        go to state 82
    attribute           go to state 84
    simulationResponse  go to state 85
    simulationControl   go to state 86
    variable            go to state 87
    formula             go to state 88
    pluginFunction      go to state 90


State 59

   87 userFunction: "USER" • "(" expression ")"

    "("  shift, and go to state 141


State 60

    0 $accept: input • "end of file"

    "end of file"  shift, and go to state 142


State 61

    1 input: expression •

    $default  reduce using rule 1 (input)


State 62

    4 expression: logicalOr •
    6 logicalOr: logicalOr • oOR logicalXor

    oOR  shift, and go to state 143

    $default  reduce using rule 4 (expression)


State 63

    7 logicalOr: logicalXor •
    8 logicalXor: logicalXor • oXOR logicalAnd

    oXOR  shift, and go to state 144

    $default  reduce using rule 7 (logicalOr)


State 64

    9 logicalXor: logicalAnd •
   10 logicalAnd: logicalAnd • oAND logicalNot
   11           | logicalAnd • oNAND logicalNot

    oAND   shift, and go to state 145
    oNAND  shift, and go to state 146

    $default  reduce using rule 9 (logicalXor)


State 65

   12 logicalAnd: logicalNot •

    $default  reduce using rule 12 (logicalAnd)


State 66

   14 logicalNot: relational •
   15 relational: relational • "<" additive
   16           | relational • ">" additive
   17           | relational • oLE additive
   18           | relational • oGE additive
   19           | relational • oEQ additive
   20           | relational • oNE additive

    oLE  shift, and go to state 147
    oGE  shift, and go to state 148
    oEQ  shift, and go to state 149
    oNE  shift, and go to state 150
    "<"  shift, and go to state 151
    ">"  shift, and go to state 152

    $default  reduce using rule 14 (logicalNot)


State 67
